--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@media (min-width: 320px) {
+  .container {
+    max-width: 568px; /
+  }
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #853562;
